--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/FedericoGinosa/datalytics#readme",
   "dependencies": {
-    "express": "^4.13.3"
+    "config": "^1.16.0",
+    "express": "^4.13.3",
+    "express-mongoose-status": "0.0.3",
+    "morgan": "^1.6.1"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
