--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "config": "^1.16.0",
     "express": "^4.13.3",
     "express-mongoose-status": "0.0.3",
-    "morgan": "^1.6.1"
+    "install": "^0.1.8",
+    "jquery": "^2.1.4",
+    "morgan": "^1.6.1",
+    "npm": "^2.14.2",
+    "passport": "^0.3.0",
+    "passport-twitter": "^1.0.3"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
