--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "config": "^1.16.0",
     "express": "^4.13.3",
     "express-mongoose-status": "0.0.3",
+    "flummox": "^3.5.2",
     "install": "^0.1.8",
     "jquery": "^2.1.4",
+    "material-ui": "^0.11.0",
     "morgan": "^1.6.1",
     "npm": "^2.14.2",
     "passport": "^0.3.0",
-    "passport-twitter": "^1.0.3"
+    "passport-twitter": "^1.0.3",
+    "react": "^0.13.3",
+    "react-tap-event-plugin": "^0.1.7"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
