--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "config": "^1.16.0",
     "express": "^4.13.3",
     "express-mongoose-status": "0.0.3",
+    "file-loader": "^0.8.4",
     "flummox": "^3.5.2",
     "install": "^0.1.8",
     "jquery": "^2.1.4",
@@ -33,6 +34,8 @@
     "passport": "^0.3.0",
     "passport-twitter": "^1.0.3",
     "react": "^0.13.3",
+    "react-fontawesome": "^0.3.2",
+    "react-grid-layout": "^0.8.5",
     "react-tap-event-plugin": "^0.1.7"
   },
   "devDependencies": {
@@ -45,6 +48,7 @@
     "gulp-plumber": "^1.0.1",
     "gulp-stream": "0.0.2",
     "less-plugin-clean-css": "^1.5.1",
+    "reactify": "^1.1.1",
     "uglifyify": "^3.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
