--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
   },
   "homepage": "https://github.com/FedericoGinosa/datalytics#readme",
   "dependencies": {
+    "body-parser": "^1.13.3",
     "config": "^1.16.0",
     "express": "^4.13.3",
     "express-mongoose-status": "0.0.3",
+    "express-session": "^1.11.3",
     "file-loader": "^0.8.4",
     "flummox": "^3.5.2",
+    "gulp": "^3.9.0",
     "install": "^0.1.8",
-    "jquery": "^2.1.4",
     "material-ui": "^0.11.0",
+    "mongoose": "^4.1.6",
     "morgan": "^1.6.1",
     "npm": "^2.14.2",
     "passport": "^0.3.0",
@@ -36,17 +39,19 @@
     "react": "^0.13.3",
     "react-fontawesome": "^0.3.2",
     "react-grid-layout": "^0.8.5",
-    "react-tap-event-plugin": "^0.1.7"
+    "react-tap-event-plugin": "^0.1.7",
+    "request": "^2.61.0"
   },
   "devDependencies": {
+    "babel-runtime": "^5.8.20",
     "babelify": "^6.3.0",
     "browserify": "^11.0.1",
-    "gulp": "4.0.0-alpha.1",
     "gulp-babel": "^5.2.1",
     "gulp-less": "^3.0.3",
     "gulp-livereload": "^3.8.0",
     "gulp-plumber": "^1.0.1",
     "gulp-stream": "0.0.2",
+    "gulp-util": "^3.0.6",
     "less-plugin-clean-css": "^1.5.1",
     "reactify": "^1.1.1",
     "uglifyify": "^3.0.1",
