--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/FedericoGinosa/datalytics#readme",
   "dependencies": {
+    "async": "^1.4.2",
     "body-parser": "^1.13.3",
     "config": "^1.16.0",
     "express": "^4.13.3",
