--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp": "^3.9.0",
     "install": "^0.1.8",
     "jade": "^1.11.0",
+    "lodash": "^3.10.1",
     "material-ui": "^0.11.0",
     "moment": "^2.10.6",
     "mongoose": "^4.1.6",
