--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
     "react-chartjs": "^0.6.0",
     "react-fontawesome": "^0.3.2",
     "react-grid-layout": "^0.8.5",
-    "react-tap-event-plugin": "^0.1.7",
+    "react-highcharts": "^2.0.0",
     "react-router": "1.0.0-rc1",
+    "react-tap-event-plugin": "^0.1.7",
     "redis": "^0.12.1",
     "redis-timeseries": "^0.4.0",
     "request": "^2.61.0",
