--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "homepage": "https://github.com/FedericoGinosa/datalytics#readme",
   "dependencies": {
-    "md5": "2.0.0",
     "async": "^1.4.2",
     "body-parser": "^1.13.3",
     "chart.js": "^1.0.2",
@@ -35,6 +34,7 @@
     "jade": "^1.11.0",
     "lodash": "^3.10.1",
     "material-ui": "^0.11.0",
+    "md5": "2.0.0",
     "moment": "^2.10.6",
     "mongoose": "^4.1.6",
     "morgan": "^1.6.1",
@@ -55,6 +55,7 @@
     "redis-timeseries": "^0.4.0",
     "request": "^2.61.0",
     "route-parser": "0.0.4",
+    "sentiment": "^1.0.2",
     "socketcluster": "^2.3.16",
     "socketcluster-client": "^2.3.13",
     "twitter-stream-channels": "^0.2.4",
