--- a/package.json
+++ b/package.json
@@ -62,9 +62,13 @@
     "wait.for": "^0.6.6"
   },
   "devDependencies": {
+    "babel-eslint": "^4.1.3",
     "babel-runtime": "^5.8.20",
     "babelify": "^6.3.0",
     "browserify": "^11.0.1",
+    "eslint": "^1.5.1",
+    "eslint-config-airbnb": "^0.1.0",
+    "eslint-plugin-react": "^3.4.2",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.1",
     "gulp-less": "^3.0.3",
